--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,14 @@
 language: ruby
 
 rvm:
-  - 2.3.1
-  - 2.3.0
-  - 2.2.2
-  - 2.1
-  - 2.0.0
-  - rbx-2
+  - 3.2.2
 
 env:
   - DB=sqlite3
-  - DB=mysql
   - DB=postgresql
 
 gemfile:
-  - gemfiles/activerecord_3.2.gemfile
-  - gemfiles/activerecord_4.0.gemfile
-  - gemfiles/activerecord_4.1.gemfile
-  - gemfiles/activerecord_4.2.gemfile
-  - gemfiles/activerecord_5.0.gemfile
+  - gemfiles/activerecord_7.0.gemfile
 
 sudo: false
 
@@ -29,18 +19,5 @@ script: bundle exec rake
 matrix:
   fast_finish: true
   allow_failures:
-      - gemfile: gemfiles/activerecord_edge.gemfile
-      - rvm: rbx-2
-  exclude:
-      - rvm: 2.0.0
-        gemfile: gemfiles/activerecord_4.2.gemfile
-      - rvm: 2.2.2
-        gemfile: gemfiles/activerecord_3.2.gemfile
-      - rvm: rbx-2
-        gemfile: gemfiles/activerecord_3.2.gemfile
-      - rvm: 2.1
-        gemfile: gemfiles/activerecord_5.0.gemfile
-      - rvm: 2.0.0
-        gemfile: gemfiles/activerecord_5.0.gemfile
-      - rvm: rbx-2
-        gemfile: gemfiles/activerecord_5.0.gemfile
+      - gemfile: gemfiles/activerecord_7.0.gemfile
+      - rvm: 3.2.2
